Displayed the board.
- handle click and display the X or O
- update the status and switch from player X to player O

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <h1>Tic-Tac-Two</h1>
     <h3>Object-Oriented Programming</h3>
-    <div>Player X's Turn</div>
+    <div id="status">Player X's Turn</div>
     <div class="board-container">
-        <div class="board"></div>
+        <div class="board" id="board"></div>
     </div>
-    <button>Restart</button>
+    <button id="restartBtn">Restart</button>
+    <script src="script.js"></script>
 </body>
 </html>
